Fix Touch-Recogntion on mobile devices and cleanup css files

--- a/front/src/app/navigation/navigation.page.scss
+++ b/front/src/app/navigation/navigation.page.scss
@@ -21,14 +21,6 @@
     z-index: 10;
 }
 
-.draggable {
-    cursor: grab; /* W3C standards syntax, all modern browser */
-}
-
-.draggable:active {
-    cursor: grabbing;
-}
-
 .center {
     margin-left: auto;
     margin-right: auto;
